# Algorithms

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  algebra.cmake  approx.cmake  graph.cmake  induction.cmake  sequence.cmake  structures.cmake
algebra/: CMakeLists.txt
algebra/include/algebra/: algebra.h
algebra/src/: misc-all.cpp
algebra/src/algebra/: algebra.cpp  algebraTemp.cpp
approx/include/approx/: npc_graph.h
approx/src/approx/: approx-all.cpp  npc_graph.tpp
graph/include/graph/: bipartite.h  closure.h  components.h  max_flow_min_cut.h  min_flow_max_cut.h  order_dimension.h  orientation.h  path.h  search.h  spanning_tree.h
graph/src/: graph-all.cpp
graph/src/graph/: bipartite.cpp  bipartite.tpp  closure.cpp  closure.tpp  components.cpp  components.tpp  max_flow_min_cut.cpp  max_flow_min_cut.tpp  min_flow_max_cut.cpp  path.cpp  path.tpp  search.cpp  search.tpp  spanning_tree.cpp  spanning_tree.tpp
include/misc/: GraphMisc.h  algebra.h  function.h
induction/: Readme.md
induction/include/induction/: GraphMisc.h  algebra.h  function.h  graphic.h
induction/solutions/: Drill.md
induction/src/: misc-all.cpp
induction/src/induction/: GraphMisc.cpp  algebra.cpp  algebraTemp.cpp  function.cpp  graphic.cpp
misc/include/misc/: function.h
npc/include/npc/: CDCL.h
npc/include/npc/karp/: certificate.h  reduction.h
sequence/: Readme.md  sequence-all.cpp
sequence/include/sequence/: 6310HW2.hpp  BinarySearch.h  CompareSort.h  Huffman.h  Majority.h  NonCompareSort.h  OrderStatistics.h  SequenceComp.h  binary_search.h  compare_sort.h  majority.h  non_compare_sort.h  order_stats.h  sequence_comparison.h  subsequence.h
sequence/src/sequence/: BinarySearch.cpp  CompareSort.cpp  Huffman.cpp  Majority.cpp  NonCompareSort.cpp  OrderStatistics.cpp  SequenceComp.cpp  binary_search.tpp  compare_sort.cpp  compare_sort.tpp  majority.tpp  non_compare_sort.cpp  order_stats.cpp  sequence_comparison.cpp  sequence_comparison.tpp  subsequence.cpp  subsequence.tpp
special_case/include/special_case/: model.h  model_gen.h  robust.h
src/: misc-all.cpp
src/misc/: GraphMisc.cpp  algebra.cpp  algebraTemp.cpp  function.cpp
structures/: AVLTree.h  AdjacencyList.h  BinarySearchTree.h  BinaryTree.h  BinaryTreeIterator.h  BinaryTreeIteratorImpl.h  BinaryTreeNode.h  Graph.h  Heap.h  PrimitiveBinarySearchTree.h  UnionFind.h  structures-all.cpp
structures/include/structures/: AVLTree.h  AVL_tree.h  AdjacencyList.h  AdjacencyMatrix.h  B_tree.h  BinarySearchTree.h  BinaryTree.h  BinaryTreeIterator.h  BinaryTreeIteratorImpl.h  BinomialHeap.h  FibonacciHeap.h  Graph.h  GraphImpl.h  Heap.h  NodeBinaryHeap.h  NodeHeap.h  PrimitiveBinarySearchTree.h  RedBlackTree.h  UnionFind.h  binary_search_tree.h  binary_search_tree_naive.h  binary_tree_base.h  binary_tree_iterator.h  binary_tree_iterator_impl.h  disjoint_set.h  dynamic_matrix.h  graph.h  graph_adjacency_list.h  graph_adjacency_matrix.h  graph_impl.h  heap  heap_Fibonacci.h  heap_base.h  heap_binary.h  heap_binomial.h  heap_node_base.h  matrix.h  partitioner.h  red_black_tree.h  vEB_iterator.h  (+3 more)
structures/src/: AVLTree.cpp  AdjacencyList.cpp  AdjacencyMatrix.cpp  BinarySearchTree.cpp  BinaryTree.cpp  BinaryTreeIterator.cpp  BinaryTreeIteratorImpl.cpp  BinaryTreeNode.cpp  Graph.cpp  Heap.cpp  PrimitiveBinarySearchTree.cpp
structures/src/structures/: AVLTree.cpp  AVL_tree.cpp  AVL_tree.tpp  AdjacencyList.cpp  AdjacencyMatrix.cpp  B_tree.tpp  BinarySearchTree.cpp  BinaryTree.cpp  BinaryTreeIterator.cpp  BinaryTreeIteratorImpl.cpp  BinomialHeap.cpp  FibonacciHeap.cpp  Graph.cpp  Heap.cpp  NodeBinaryHeap.cpp  NodeHeap.cpp  PrimitiveBinarySearchTree.cpp  RedBlackTree.cpp  UnionFind.cpp  binary_search_tree.cpp  binary_search_tree.tpp  binary_search_tree_naive.cpp  binary_search_tree_naive.tpp  binary_tree_base.cpp  binary_tree_base.tpp  binary_tree_iterator.cpp  binary_tree_iterator.tpp  binary_tree_iterator_impl.cpp  binary_tree_iterator_impl.tpp  disjoint_set.cpp  disjoint_set.tpp  dynamic_matrix.tpp  graph.cpp  graph.tpp  graph_adjacency_list.cpp  graph_adjacency_list.tpp  graph_adjacency_matrix.cpp  graph_adjacency_matrix.tpp  heap_Fibonacci.cpp  heap_Fibonacci.tpp  (+15 more)
testing/: AlgorithmTest.cpp  AllocationTracker.h  BinarySearchTreeTest.cpp  CNF_reader.h  UnionFindTest.cpp  generator.cpp  generator.h  main.cpp
testing/misc/: AlgebraTest.cpp  FunctionTest.cpp  GraphMiscTest.cpp  GraphicTest.cpp
testing/structures/: BinarySearchTreeTest.cpp  UnionFindTest.cpp
util/include/util/: exposed_graph.h  it_hash.h  key_eq_wrapper.h  pair_hash.h
